fixed: added a fruits class to style css and aligned text to center for the title class

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,13 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: auto;
+  text-align: center;
+}
+
+.fruits {
+  display: flex;
+  gap: 20px;
 }
 
 /* do not edit this footer */
